--- a/build.gradle
+++ b/build.gradle
@@ -41,10 +41,12 @@ dependencies {
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     implementation 'org.springframework.retry:spring-retry'
     implementation 'org.springframework.boot:spring-boot-starter-aop'
-    implementation 'com.amazonaws:aws-java-sdk-s3:1.12.261'
-    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
     testRuntimeOnly 'com.h2database:h2'
     implementation 'me.paulschwarz:spring-dotenv:4.0.0'
+    implementation 'software.amazon.awssdk:s3:2.25.27'
+    implementation 'software.amazon.awssdk:auth:2.27.0'
+    implementation 'software.amazon.awssdk:regions:2.27.0'
+    implementation 'com.amazonaws:aws-java-sdk-s3:1.12.261'
 }
 
 tasks.named('test') {
