--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,6 +20,10 @@ spring:
     enabled: true
     baseline-on-migrate: true
     locations: classpath:db/migration
+    validate-on-migrate: false
+    out-of-order: false
+    ignore-migration-patterns: "*:missing"
+    clean-disabled: true
   servlet:
     multipart:
       max-file-size: 10MB
