--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+.gradle/
 
 ### STS ###
 .apt_generated
@@ -34,6 +35,7 @@ build/
 
 ### Environment Variables ###
 .env
+.env.example
 .env.local
 .env.*.local
 application-local.yml
